--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "googletest"]
 	path = googletest
 	url = git@github.com:google/googletest.git
+[submodule "javaparser"]
+	path = javaparser
+	url = git@github.com:javaparser/javaparser.git
